Adds a consul build and removes default hcl which should be injected instead

--- a/packer/nomad/upstart.conf
+++ b/packer/nomad/upstart.conf
@@ -1,4 +1,18 @@
+description "Nomad agent"
+
 start on (filesystem and net-device-up IFACE=lo)
 stop on runlevel [!2345]
 
-exec /usr/bin/nomad agent -config /etc/nomad
+respawn
+
+normal exit 0 INT
+
+script
+  if [ -f "/etc/service/nomad" ]; then
+    . /etc/service/nomad
+  fi
+
+  exec /usr/bin/nomad agent \
+      -config="/etc/nomad" \
+      >>/var/log/nomad.log 2>&1
+end script
