--- a/packer/consul/consul.service
+++ b/packer/consul/consul.service
@@ -1,13 +1,17 @@
 [Unit]
 Description=consul agent
+Documentation=https://www.consul.io/docs
 Requires=network-online.target
 After=network-online.target
 
 [Service]
-EnvironmentFile=-/etc/sysconfig/consul
-Restart=on-failure
-ExecStart=/usr/bin/consul agent $CONSUL_FLAGS -config-dir=/etc/systemd/system/consul.d
+KillMode=process
+KillSignal=SIGINT
 ExecReload=/bin/kill -HUP $MAINPID
+Restart=on-failure
+LimitNOFILE=65536
+EnvironmentFile=-/etc/sysconfig/consul
+ExecStart=/usr/bin/consul agent -config-file /etc/consul/main.json
 
 [Install]
 WantedBy=multi-user.target
