--- a/packer/nomad/nomad.service
+++ b/packer/nomad/nomad.service
@@ -1,13 +1,18 @@
 [Unit]
-Description=Nomad
-Documentation=https://nomadproject.io/docs/
+Description=nomad agent
+Documentation=https://nomadproject.io/docs
+Requires=network-online.target
+After=network-online.target
 
 [Service]
 KillMode=process
 KillSignal=SIGINT
-ExecStart=/usr/bin/nomad agent -config /etc/nomad
 ExecReload=/bin/kill -HUP $MAINPID
+Restart=on-failure
 LimitNOFILE=65536
+
+EnvironmentFile=-/etc/sysconfig/consul
+ExecStart=/usr/bin/nomad agent -config /etc/nomad
 
 [Install]
 WantedBy=multi-user.target
